--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -27,6 +27,7 @@ jobs:
           -configuration Release \
           -destination 'generic/platform=iOS' \
           -archivePath MobileMkch.xcarchive \
+          -allowProvisioningUpdates \
           archive \
           -verbose
           
