--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -27,7 +27,9 @@ jobs:
           -configuration Release \
           -destination 'generic/platform=iOS' \
           -archivePath MobileMkch.xcarchive \
-          -allowProvisioningUpdates \
+          CODE_SIGN_IDENTITY="" \
+          CODE_SIGNING_REQUIRED=NO \
+          CODE_SIGNING_ALLOWED=NO \
           archive \
           -verbose
           
