--- a/FavoritesWidget/Info.plist
+++ b/FavoritesWidget/Info.plist
@@ -6,6 +6,8 @@
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widgetkit-extension</string>
-	</dict>
+</dict>
+	<key>NSSupportsLiveActivities</key>
+	<true/>
 </dict>
 </plist>
