--- a/MobileMkch/Info.plist
+++ b/MobileMkch/Info.plist
@@ -6,6 +6,8 @@
 	<array>
 		<string>com.mkch.MobileMkch.backgroundrefresh</string>
 	</array>
+	<key>NSSupportsLiveActivities</key>
+	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>background-processing</string>
