--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ playground.xcworkspace
 project.xcworkspace
 xcuserdata
 */UserInterfaceState.xcuserstate
+MobileMkch.xcodeproj/project.xcworkspace/xcuserdata/
