--- a/MobileMkch/Info.plist
+++ b/MobileMkch/Info.plist
@@ -10,6 +10,8 @@
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Нужно для выбора фото и загрузки вложений</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Нужно для сохранения изображений в Фото</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>background-processing</string>
